// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Service name
package security;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";
import "github.com/pensando/sw/api/labels/selector.proto";

import "tenant.proto";


// ----------------------------- SecurityGroup Object -----------------------------

// security group configuration
message SecurityGroupSpec {
   // FIXME: need to change or remove ServiceSelector
   // map<string, string> ServiceSelector  = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "service-labels,omitempty"];

   // Workload selector (list of labels)
   labels.Selector WorkloadSelector = 1 [(gogoproto.jsontag) = "workload-selector,omitempty"];
   // Service object selector
   repeated string ServiceSelector  = 2 [(gogoproto.jsontag) = "service-labels,omitempty"];
   // list of CIDRs that are part of this security group
   repeated string MatchPrefixes    = 3 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "match-prefixes,omitempty"];
}

// security group status
message SecurityGroupStatus {
   // list of workloads that are part of this security group
   repeated string Workloads = 1 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "workloads,omitempty"];
   // list of all policies attached to this security group
   repeated string Policies = 2;
}

// SecurityGroup represents a security zone or domain
message SecurityGroup {
 option (venice.objectPrefix) = {Collection: "security-groups", Path: "/{O.Tenant}"};
 api.TypeMeta T =1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
 api.ObjectMeta O =2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];

 // Spec contains the configuration of the security group.
 SecurityGroupSpec Spec = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];

   // Status contains the current state of the security group.
 SecurityGroupStatus Status = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}
